fixed the error in linegraph

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@ body{
 .app__left{
   flex: 0.9;
 }
+.app__dropdown{
+  background-color: white;
+}
 .app__stats{
   display: flex;
   justify-content: space-between;
