--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@ body{
   margin-bottom: 20px;
   justify-content: space-between;
 }
+
+.app__header > h1{
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
 .app__left{
   flex: 0.9;
 }
@@ -27,6 +33,23 @@ body{
 .app__stats{
   display: flex;
   justify-content: space-between;
+}
+.app__right{
+  display: flex;
+  flex-direction: column;
+}
+.app__right .MuiCardContent-root{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app__graph{
+  flex-grow: 1;
+}
+
+.app__graphTitle{
+  margin: 20px 20px;
 }
 
 @media (max-width:990px){ 
